--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A full stack photography-sharing app built in React and Node."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
